<resources>
    <string name="app_name">HW_Android1_02-11-21</string>
    <string name="profile_information">Profile information:</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="postal_address">Postal address</string>
    <string name="gender">Gender</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="birthday">Birthday</string>
    <string name="night_mode">Night mode</string>
    <string name="i_agree">I agree with collect and processing of my personal data</string>
    <string name="save">Save</string>
    <string name="edit_your_account">edit your account</string>
    <string name="back">Back</string>
</resources>